--- a/SISS/bin/SISS.dll.config
+++ b/SISS/bin/SISS.dll.config
@@ -64,9 +64,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="SISS_Context" connectionString="Data Source=localhost;Initial Catalog=SISS;Integrated Security=true;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -77,4 +75,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="SISS_context" connectionString="Data Source=DESKTOP-R7BEUM3\KALPASQL;Initial Catalog=SISS;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
