--- a/SISS/SISS.csproj
+++ b/SISS/SISS.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\Relation.cs" />
     <Compile Include="Models\Suspect.cs" />
+    <Compile Include="Models\Temp.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\SISS.cs" />
